--- a/bolt.css
+++ b/bolt.css
@@ -56,11 +56,14 @@ body {
 }
 
 .container {
-    border: 2px solid #dedede;
-    background-color: #f1f1f1;
     border-radius: 5px;
     padding: 10px;
     margin: 10px 0;
+}
+
+.lighter {
+    border: 2px solid #dedede;
+    background-color: #f1f1f1;
 }
 
 .darker {
