changed hover behavior

--- a/bolt.css
+++ b/bolt.css
@@ -1524,7 +1524,7 @@ a {
 
 .w3-button:hover {
     color: #000!important;
-    background-color: #ccc!important
+    background-color: #ccc!important;
     cursor: pointer;
 }
 
